[package]
name = "marinade-onchain-helper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_onchain_helper"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "^1.8.0"
marinade-finance = { git = "https://github.com/UXDProtocol/liquid-staking-program" }